fixed some SonarQube bugs/code-smells